--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     implementation group: 'org.apache.poi', name: 'poi-ooxml-schemas', version: '4.1.0'
     // https://mvnrepository.com/artifact/org.apache.poi/poi-scratchpad
     implementation group: 'org.apache.poi', name: 'poi-scratchpad', version: '4.1.0'
+    // https://mvnrepository.com/artifact/xerces/xercesImpl
+    implementation group: 'xerces', name: 'xercesImpl', version: '2.12.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
