--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'com.github.linyuzai'
-version '0.4.0'//20200102
+version '0.5.0'//20200106
 
 sourceCompatibility = 1.8
 
@@ -22,5 +22,10 @@ dependencies {
     implementation group: 'org.apache.poi', name: 'poi-scratchpad', version: '4.1.0'
     // https://mvnrepository.com/artifact/xerces/xercesImpl
     implementation group: 'xerces', name: 'xercesImpl', version: '2.12.0'
+    // https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
+    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.3.0'
+    // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.10'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
